--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-
+  <load src="./src/partials/header.html" />
+  <load src="./src/partials/main.html" />
+  <load src="./src/partials/footer.html" />
 </body>
 
 </html>
