--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <load src="./src/partials/header.html" />
-  <load src="./src/partials/main.html" />
-  <load src="./src/partials/footer.html" />
+  <load src="./partials/header.html" />
+  <load src="./partials/main.html" />
+  <load src="./partials/footer.html" />
 </body>
 
 </html>
